# dash

./: .env  Caddyfile  Dockerfile  Makefile  SYNC_ISSUES.md  alloy-config.alloy  compose-dev.yml  compose.yml  env.new.example  grafana-datasources.yaml  loki-config.yaml  shell.nix  stack.yml  tempo-config.yaml  todo.md
back/: Cargo.toml  Dockerfile  Dockerfile.arm  _temp.ts  package.json  pnpm-lock.yaml  tsconfig.json
back/.sqlx/: query-01df928bf293e7cf88458f8a264cd845c2ba3faff35f6d5fc5295d2988b20929.json  query-16841eb0bdd0af24cb9165625331a9d1045d057cf4b149b1bb358e49e5a009f2.json  query-2a20e55ad8e6ab0abdf8fa266d270456635fc22e9dfdfd5dc75ace77b9fd297e.json  query-2f7f09f086f02e9ce4a33efd2d04e5d94b2714a4d8530bed41826e953f22de7d.json  query-3a4ea7277d569eec80dbaca61f278117d4303cd45b42aa9b061d3e1989ccfdaf.json  query-3e031b3294775ded75195247c31800b1b9ca82dfd9cdd62ddf60c2e86b86eec8.json  query-487f08190a448d9bf4b9bffb1b6f3c5cf177ec2fa154d23aaa281d319713689f.json  query-4ccae40a813d8df5a4e4baa60eaf99517d7344c4a53ad1cdcb6b44b6ea550936.json  query-5d8352479c121fdd6c5d75155d32dc40b2f6cfd4e30ea3f8b9640baee7ab5a2d.json  query-6e23cbb6ccdd351eca7b28bb12fd6ade1b0a924e6d46e8e4fb5d3ab6016b4838.json  query-73dbbdbc37caddd989a9fa769980db984099093dc63ead0c9f57015a0ae54636.json  query-7a6571c01e5f998c59e889da18b0acdc2a017ef4fb20cb0d79d241e3c5fdb7d5.json  query-81c1ea6bf122cbb6fea53ee186bdd117907908acee0afbf58b5cb68027876454.json  query-95f0214869a59be13be4ae36425af57e46e85196061a600c0671b221a4dece61.json  query-b10c00be7de6f31624382ad07b36c988fc6d2573a1bf4102db27af595aac745d.json  query-b43cfebbced1a8a66101449b9502ec022f3df721130dd0552baaf355156d6dee.json  query-b80b93d5cb04522967be75329e82c40f6fdbff10f0a4f27ec788f5ed4d14e2b5.json  query-bab8ccbf33b447afb0fda9da51aa85059c2265ad63104319d6d45591df9d6df1.json  query-cf8bcf91adbd663c1326a006518487103c3f10f1fe35f2f993ee85035f6ef796.json  query-d02ec6a0f3195c6dc7b3c472037fc68a51f40dd445f64fbc4bcf9bcf09837869.json  query-e49e6a22d799e494a2552de5e57df5f0198f1ec791fbce9a27324ac5bec20b3f.json  query-edebc75255f24adae0425dd50ba29b533a781e424700af4da181a5458310a553.json  query-eed1b1a10437ff80f70e5867ced1e0b4b34f0237c12c484f4ef17a84c3e14dcc.json
back/migrations/: 0001_init.sql  20250419082232_init.sql  20250912193234_add_transaction_notes.sql  20250912194703_add_transaction_categorize_on.sql  20260312205252_soft_delete_integrations.sql
back/src/: auth.rs  auth.ts  auth_api.rs  auth_middleware.rs  bootstrap.rs  config.rs  envs.ts  error.rs  frontend.rs  hub.rs  index.ts  lib.rs  main.rs  password.ts  proto.rs  server.ts  state.rs  sync_api.rs  token.ts  trpc.ts  utils.rs
back/src/data/: account.rs  categories.ts  category.rs  data.ts  id.ts  mod.rs  settings.rs  transactions.ts  tx_mutations.rs  tx_queries.rs  user.rs  user_bank_integrations.rs  users.ts
back/src/db/: mod.rs
back/src/endpoints/: auth.rs  me.rs  mod.rs  openapi.rs  settings.rs
back/src/routes/: _router.ts  auth_v1.ts  categories_v1.ts  transactions_v1.ts  users_v1.ts
back/src/services/: auth.ts  categories.ts  transactions.ts
back/src/statement_parsing/: op.rs
back2/: Cargo.toml  Dockerfile  Dockerfile.arm.full
back2/.sqlx/: query-009c9d7c5cd3fffdcf609081b32df89c1ea00071c14022bb38468dd98aaf051a.json  query-09eded83d278d22a845259b062ad5cc61d18c26b2716e77ebb6ae85665ee8d35.json  query-2f472d51b27c789b7b28576b71ec9d839d4676a7dc02b4054c4682beb725bf29.json  query-32a1e87bc55d0214dc9d134b3565da5375501d8894025cef26c8a34530f1cba9.json  query-6071018ad698fe18c599aacc1580b66674fcf1790441a0d0a07b1c6af9368bdc.json  query-6ae480258f179ee1c70cb7559acd51e6950d58e6730dabae117041566ae840ec.json  query-7bc73649329353c6861f22684002bd2b46d5ac475679d51e00e2160a8cc131e6.json  query-805a3f838100bb100e520ecad8b881bc014414f0a1bbf2e5446ed465dc3fbd62.json  query-876144bceda7a304681bd84ca353480a96b0386574cfeb1c9ec565c62eebf129.json  query-87658d0bdfdb076ba38f8299fa1808008b626b70f89db6c5a82d4a9fb1e5e5e6.json  query-8fb4873a5ac4e2cfc9d82e03484ad007c1a682d3ba9788f30583655a8ae965d0.json  query-ab50568c338d97661eb2536c2fb494cea1492a4b6ad4be884810165acb0618f7.json  query-b7b1b76e6c18d676cd088e84f4575080e64ca9ad703fb176224d40c6119925f8.json  query-e4bf0c06b43fefd2c83cfaa25e487c65e991913246cab6599bd40745ee6d78aa.json  query-e73f2be6839d3589deaf5029f6a97478407e546f14666b8211e92ead3f866b45.json  query-e8395036bfb1b59b0c332fe472767b703b9a1dc3b73339a243387eb1e49d9143.json  query-ea8a47a6e9c032d00b17d1d280b77a2c57c4e5f840bc48f444ce08c22dd0aa9a.json  query-fa9ea856b9a3c814c03a763abf2891e13ad1aec44c8fc5c3d6a2ddd1229aa078.json  query-fdbd1cdff5842359925af50a02c087bd572745f937c8b40dd5f1071f67ff3cab.json
back2/migrations/: 20250419082232_init.sql
back2/src/: auth_middleware.rs  config.rs  error.rs  main.rs
back2/src/data/: account.rs  category.rs  import.rs  mod.rs  settings.rs  tx_mutations.rs  tx_queries.rs  user.rs  user_bank_integrations.rs
back2/src/endpoints/: auth.rs  banks.rs  categories.rs  me.rs  mod.rs  openapi.rs  settings.rs  transactions.rs
back2/src/services/: auth.rs  mod.rs  (+2 more)
sync/: Cargo.toml  build.rs  protocol.proto
sync/migrations/: 0001_init.sql  0002_snapshots.sql  001_identities.sql  002_sync_items.sql
sync/src/: auth.rs  bootstrap.rs  config.rs  error.rs  hub.rs  main.rs  middleware.rs  proto.rs  state.rs  sync_api.rs  ws.rs
(+316 files in other folders)
