[package]
name = "backend"
version = "0.0.0"
edition = "2024"

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.203", features = [ "derive" ] }
serde_json = "1.0.118"
thiserror = "2.0.12"
anyhow = { version = "1.0.86" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
hex = "0.4.3"
sha2 = "0.10.8"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
hyper = "1.3.1"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace", "cors"] }
cookie = "0.18.1"
hmac = "0.12.1"
ulid = "1"
base64 = "0.22.1"
rand = "0.9.1"
utoipa-axum = "0.2.0"
utoipa = "5.3.1"
http = "1.3.1"
rustc-hash = "2.1.1"
futures = "0.3.31"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
