[package]
name = "sync"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
config = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"
base64 = "0.22"
argon2 = "0.5.3"
rand = "0.10"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
ulid = { version = "1.2.1", features = ["uuid", "serde"] }

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
