[package]
name = "sync"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
config = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"
base64 = "0.22"
futures-util = "0.3"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ulid = { version = "1", features = ["serde"] }
rand = "0.8"
url = "2"
time = "0.3"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
